--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,11 @@ dependencies {
     // Recycler view and Card view
     def recycler_view_version = "1.0.0"
     def card_view_version = "1.0.0"
+    def recycler_view_item_animation_version = "1.3.0"
     implementation "androidx.cardview:cardview:$card_view_version"
     implementation "androidx.recyclerview:recyclerview:$recycler_view_version"
+    implementation "jp.wasabeef:recyclerview-animators:$recycler_view_item_animation_version"
+
     // Glide
     def glide_version = "4.8.0"
     implementation "com.github.bumptech.glide:glide:$glide_version"
@@ -48,4 +51,7 @@ dependencies {
     def retrofit_version = "2.4.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+//    // Pagination
+//    def pagination_version = "0.5.1"
+//    implementation "com.github.markomilos:paginate:$pagination_version"
 }
