--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     def retrofit_version = "2.4.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation 'androidx.paging:paging-runtime:2.1.0'
 //    // Pagination
 //    def pagination_version = "0.5.1"
 //    implementation "com.github.markomilos:paginate:$pagination_version"
