--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,10 @@ dependencies {
      * Step 2: Adding ViewModel and Lifecycle
      */
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+    def room_version = "2.2.0-alpha01" // 2.1.0 for latest stable version
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
     // Glide
     def glide_version = "4.8.0"
     implementation "com.github.bumptech.glide:glide:$glide_version"
